# surface_poly_fit

./: .gitattributes  .gitignore  .readthedocs.yaml  CMakeLists.txt  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  vcpkg.json
.github/workflows/: python-test-vcpkg.yml  python-test.yml  python-wheel-vcpkg.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/_static/: theme_overrides.css
docs/source/_templates/autosummary/: inherits_TestCase_class.rst  module.rst
docs/source/about/: index.rst
docs/source/cli/: index.rst  surface_poly_fit_cli.rst  surface_poly_fit_results_to_mesh.rst
docs/source/reference/: index.rst  surface_poly_fit.rst
include/surface_poly_fit/: compute_normal.h  compute_normal_CGAL_5pt4.h  compute_normal_CGAL_5pt5.h  compute_normal_CGAL_5pt6.h  monge_jet_fitting.h  monge_jet_fitting_py.h  polyhedral_surface.h  polyhedral_surface_ops.h  polyhedral_surface_py.h  polyhedral_surface_rings.h  spf_cgal.h  spf_defs.h
src/: CMakeLists.txt  monge_jet_fitting.cpp  monge_jet_fitting_py.cpp  polyhedral_surface.cpp  polyhedral_surface_ops.cpp  polyhedral_surface_py.cpp  polyhedral_surface_rings.cpp  spf_cgal.cpp  spf_cgal_py.cpp
surface_poly_fit/: __init__.py  _version.py  cli.py  copyright.txt  core.py  results_to_mesh.py  tests.py
