[build-system]
requires = [
  "setuptools>=42",
  "versioneer[toml]",
  "scikit-build",
  "cmake",
  "ninja"
]
build-backend = "setuptools.build_meta"

[project]
name = "surface_poly_fit"
dependencies = [
    "numpy>=1.14.5",
    "scipy",
    "vtk",
    "rtree",
    "trimesh",
    "meshio"
]
dynamic = ["version"]

[project.scripts]
surface_poly_fit = "surface_poly_fit.cli:surface_poly_fit_main_cli"
surface_poly_fit_r2m = "surface_poly_fit.results_to_mesh:results_to_mesh_main_cli"

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "surface_poly_fit/_version.py"
versionfile_build = "surface_poly_fit/_version.py"
tag_prefix = "v"
parentdir_prefix = "surface_poly_fit-"

